Added random color for labels

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="static/css/style.css">
     <script type="text/javascript" src="static/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="static/js/paper-full.js"></script>
+
+    <script type="text/javascript" src="src/utility.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
     <script type="text/paperscript" canvas="mainCanvas" src="src/pMain.js"></script>
 </head>
