--- a/index.html
+++ b/index.html
@@ -11,19 +11,6 @@
 	<script type="text/javascript" src="src/index.js"></script>
 	<script type="text/paperscript" canvas="mainCanvas" src="src/pMain.js"></script>
 </head>
-<!DOCTYPE html>
-<html>
-
-<head>
-	<meta charset="UTF-8">
-	<title>Image Segmenting and Labeling Tool</title>
-	<link rel="stylesheet" href="static/css/style.css">
-	<script type="text/javascript" src="static/js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="static/js/paper-full.js"></script>
-	<script type="text/javascript" src="src/utility.js"></script>
-	<script type="text/javascript" src="src/index.js"></script>
-	<script type="text/paperscript" canvas="mainCanvas" src="src/pMain.js"></script>
-</head>
 
 <body>
 	<div style="position:absolute;" full>
@@ -38,6 +25,8 @@
 		<input type="file" id="selectedFile" style="display: none;" />
 		<button onclick="document.getElementById('selectedFile').click();">Load</button>
 		<button id="export-button">Export</button>
+	</div>
+	<div>
 	</div>
 </body>
 
