--- a/index.html
+++ b/index.html
@@ -4,30 +4,93 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Image Segmenting and Labeling Tool</title>
+	<link rel="stylesheet" href="static/css/semantic.min.css">
 	<link rel="stylesheet" href="static/css/style.css">
 	<script type="text/javascript" src="static/js/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="static/js/semantic.min.js"></script>
 	<script type="text/javascript" src="static/js/paper-full.js"></script>
+	<script type="text/javascript" src="static/js/htmlparser.min.js"></script>
 	<script type="text/javascript" src="src/utility.js"></script>
-	<script type="text/javascript" src="src/index.js"></script>
 	<script type="text/paperscript" canvas="mainCanvas" src="src/pMain.js"></script>
 </head>
 
 <body>
-	<div style="position:absolute;" full>
-		<img id="background" src="static/img/4.jpg" fit>
+	<input type="file" id="selectedFile" style="display: none;" />
+	<div class="container">
+		<div class="ui three column grid">
+			<div class="six wide column">
+				<div>
+					<button class="ui primary button" id="save-button">Save</button>
+					<button class="ui green button" onclick="document.getElementById('selectedFile').click();">Load</button>
+					<button class="ui grey button" id="export-button">Export</button>
+				</div>
+			</div>
+			<div class="four wide centered column">
+				<button class="ui red button" id="remove-button">Remove</button>
+			</div>
+			<div class="right aligned right floated four wide column">
+				<!-- <select class="ui dropdown" id="image-select">
+				</select> -->
+				<div class="ui floating labeled icon dropdown button">
+					<i class="dropdown icon"></i>
+					<span class="text">Select image file</span>
+					<div class="menu">
+						<div class="item">
+							<i class="left dropdown icon"></i>
+							<span class="text">MSC</span>
+							<div class="left menu MSC">
+							</div>
+						</div>
+						<div class="item">
+							<i class="left dropdown icon"></i>
+							<span class="text">Adipocyte</span>
+							<div class="left menu Adipocyte">
+							</div>
+						</div>
+						<div class="item">
+							<i class="left dropdown icon"></i>
+							<span class="text">Chondrocyte</span>
+							<div class="left menu Chondrocyte">
+							</div>
+						</div>
+						<div class="item">
+							<i class="left dropdown icon"></i>
+							<span class="text">Osteoblast</span>
+							<div class="left menu Osteoblast">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div style="position:absolute;" full>
-		<canvas id="mainCanvas" full></canvas>
-	</div>
-	<div style="position:absolute;">
-		<button id="remove-button">Remove</button>
-		<button id="save-button">Save</button>
-		<input type="file" id="selectedFile" style="display: none;" />
-		<button onclick="document.getElementById('selectedFile').click();">Load</button>
-		<button id="export-button">Export</button>
-	</div>
-	<div>
-	</div>
+	<canvas id="mainCanvas" resize="true" style="width:100%; height: 100%;"></canvas>
+	<script type="text/javascript">
+	$('.ui.dropdown').dropdown({
+		onChange: function(text, value, item) {
+			var value = item[0].attributes['value'].nodeValue;
+			setBackground(value);
+		}
+	});
+
+	String.prototype.format = function() {
+		a = this;
+		for (k in arguments) {
+			a = a.replace("{" + k + "}", arguments[k])
+		}
+		return a
+	}
+
+	var itemFormat = "<div class='item' value='{0}'>{1}</div>";
+	['MSC', 'Adipocyte', 'Chondrocyte', 'Osteoblast'].forEach(function(name) {
+		$.get("https://api.github.com/repos/xzvfinet/image-segmenting-labeling/contents/static/img/" + name, function(data) {
+			data.forEach(function(el) {
+				$("." + name).append(itemFormat.format(el.download_url, el.name))
+			});
+		});
+
+	});
+	</script>
 </body>
 
 </html>
